--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-       /node_modules
-       /public/hot
-       /public/storage
-       /storage/*.key
-       /vendor
-       .idea
-       .idea/workspace.xml
-       /.vscode
-       /.vagrant
-       Homestead.json
-       Homestead.yaml
-       npm-debug.log
-       yarn-error.log
-       .env
-       firebase.json
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vscode
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+.env
+.phpunit.result.cache
+firebase.json
